--- a/index.html
+++ b/index.html
@@ -14,22 +14,53 @@
 <body>
     
 
-    <section>
-
-        <div class="half-width">
+    <section class="top-banner">
+         <div class="half-width">
             <h1>Welcome</h1>
             <h1>My <span class="text-highlight">Portfolio</span></h1>
             <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy i</p>
-
+            <a class="link-button" target="_blank" href=https://github.com>Github Link</a>
         </div>
 
         <div class="half-width">
             <img src="images/image 11.png" alt="">
         </div>
+    </section>
+
+    <section class="medium-banner">
+
+        <div class="half-width">
+            <img src="images/image 11.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h2>Good Morning</h2>
+            <h3>Medium is an American online publishing platform</h3>
+            <p>Medium is an open platform where over 100 million readers come to find insightful and dynamic thinking. Here, expert and undiscovered voices alike dive into .</p>
+            <a class="link-button" target="_blank" href="https://medium.com/">Visit now</a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="web-dev" class="half-width single-experience">
+            <h2>Full stack web developer</h2>
+            <h3 class="text-highlight">2022 - Full stack web developer</h3>
+            <p>A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to:.Full stack web developers are the Swiss Army knife of the code world. Having that designation means you can produce end to end solutions</p>
+
+        </div>
+        <div id="android-dev" class="half-width single-experience">
+            <h2>Android App developer</h2>
+            <h3 class="text-highlight">2020 - Full stack web developer</h3>
+            <p>A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to:.Full stack web developers are the Swiss Army knife of the code world. Having that designation means you can produce end to end solutions</p>
+
+        </div>
 
     </section>
 
-
+    <footer>
+        <p>© 2022 GitHub, Inc.</p>
+    </footer>
 
 </body>
 </html>
